Changelog 

06-27-2025 ... 0.0.0.0 ... Movegen
06-28-2025 ... 0.0.1.0 ... Makefile + Other Cleanups
06-29-2025 ... 0.0.1.1 ... 960 Support
06-30-2025 ... 0.1.0.0 ... Basic A/B Search (Unverified)
07-01-2025 ... 0.1.1.0 ... PV Table
07-01-2025 ... 0.1.2.0 ... Iterative Deepening, Time Management
07-01-2025 ... 0.1.2.1 ... Bench
07-02-2025 ... 0.2.0.0 ... MVV-LVA Move Ordering ................ (248.9 +/- 68.2), (8 + 0.08), (SPRT, 122), (Local)
07-03-2025 ... 0.3.0.0 ... Quiescent Search ..................... (248.0 +/- 67.6), (8 + 0.08), (SPRT, 137), (Local)
07-04-2025 ... 0.3.1.0 ... Principal Variation Search ........... (50.1 +/- 24.4) , (8 + 0.08), (SPRT, 642), (Local)